--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ rel="stylesheet"
 type="text/javascript"
 src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"
 ></script>
+<script src="./js/index.js"></script>
 
 
 </body>
